--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,11 @@ p {
 	-webkit-margin-start: 0px;
 	-webkit-margin-end: 0px;
 }
-/*
-.timer-text {
+h1 {
 	font-family: helvetica, sans-serif;
 	font-size: 40px;
-	fill: #eee;
-}
-.timer {
+	color: #555;
 	text-align: center;
-	font-size: 40px;
-}*/
+	margin-bottom: 5px;
+}
+
